--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -74,7 +74,7 @@ jobs:
           run: |
             echo "ENV OK"
         with:
-          host: ec2-13-60-119-201.eu-north-1.compute.amazonaws.com
+          host: ${{ secrets.DEV_AWS_EC2_HOST }}
           username: ubuntu
           port: 22
           key: ${{ secrets.DEV_SSH_SECRET_KEY }}
